- В таблице товаров теперь отображается их состояние, по типу дерева ресурсов (удаленый товар красным цветом, неопубликованный - серым и т.п.)
- Исправлен баг при сохранении в админке заказа с пустым методом оплаты и не пустым методом доставки.
- Ресурсы-категории товаров больше не обязаны быть контейнерами (теперь не важно значение isfolder).
-----
- Added invoke events to launch the plugins when you changing products in the component. mSearch will now index goods on changing.
- Added a more options for resources in the editing window of the goods (deleted, richtext,cacheable, searchable and clearcache)
- The goods grid now displays status of products, as in resources tree (deleted item is red color, unpublished - gray, etc.)
- Fixed bug in manager when you save empty payment method and not empty delivery method.
- Resources-categories of goods are no longer required to be containers (now isfolder is no matter).

1.5.1 rc (24.04.2012)
=============
- [#35] Модифицирован браузер MODx для возможности выбора директорий. miniShop правильно понимает источники файлов.
- [#36] Добавлена возможность сохранения товара в корень.
- [#37] Размерность параметра вес увеличена до 3х знаков после запятой.
-----
- [#35] Modified MODx browser to be able to select directories. miniShop understands the files source.
- [#36] Added the ability to save products in the root.
- [#37] The dimension of the parameter weight increased to 3 decimal places.

1.5.0 beta (22.04.2012)
=============
- Добавлено создание галереи товара.
- Новый сниппет msGetGallery для вывода изображений товара (поддерживает getPage).
- Новый чанк msGallery.row.tpl для оформления вывода изображений.
- [#30] Добавлено окно об ошибке при создании товара.
- [#34] Чанки в ModStatus сохраняются не по имени, а по ID.
- [#35] Выбор чанков и сниппетов в комбобоксах поддерживает автодополнение.
-----
- Added gallery for goods
- New snippet msGetGallery to display product images (supports getPage)