@@ -37,7 +37,7 @@ $_lang['ms.payments'] = 'Payments';
 $_lang['ms.category'] = 'Category';
 $_lang['ms.categories'] = 'Categories';
 $_lang['ms.address'] = 'Address';
-$_lang['ms.orderhistory'] = 'Hystory';
+$_lang['ms.orderhistory'] = 'History';
 $_lang['ms.delivery'] = 'Delivery';
 $_lang['ms.email'] = 'Email';
 $_lang['ms.currency'] = 'Currency';
