@@ -39,9 +39,11 @@ if ($res = $modx->getObject('ModOrders', $id)) {
 	$arr['created'] =  $res->get('created');
 	$arr['fullname'] =  $res->getFullName();
 	$arr['email'] =  $res->getEmail();
-	$arr['delivery_name'] = $res->getDeliveryName();
-	$arr['payment_name'] = $res->getPaymentName();
-	$arr['delivery_price'] = $res->getDeliveryPrice();
+	//$arr['delivery_name'] = $res->getDeliveryName();
+	//$arr['payment_name'] = $res->getPaymentName();
+	//$arr['delivery_price'] = $res->getDeliveryPrice();
+	$arr['sum'] += $res->getDeliveryPrice();
+	$arr['weight'] = $res->get('weight');
 	if ($tmp =  $res->getAddress()) {
 		foreach($tmp as $k => $v) {
 			$arr['addr_'.$k] = $v;
