@@ -1,31 +1,10 @@
 <?php
 /**
- * miniShop
- *
- * Copyright 2010 by Shaun McCormick <shaun+minishop@modx.com>
- *
- * miniShop is free software; you can redistribute it and/or modify it under the
- * terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
- *
- * miniShop is distributed in the hope that it will be useful, but WITHOUT ANY
- * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
- * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License along with
- * miniShop; if not, write to the Free Software Foundation, Inc., 59 Temple
- * Place, Suite 330, Boston, MA 02111-1307 USA
- *
- * @package minishop
- */
-/**
  * Get an Order
  * 
  * @package minishop
  * @subpackage processors
  */
-/* get board */
 
 $id = $modx->getOption('id',$_REQUEST, 0);
 
@@ -36,14 +15,14 @@ if (empty($id)) {
 if ($res = $modx->getObject('ModOrders', $id)) {
 	$arr = array();
 	$arr['num'] =  $res->get('num');
+	$arr['sum'] = $res->get('sum') + $res->getDeliveryPrice();
+	$arr['weight'] =  $res->get('weight');
 	$arr['created'] =  $res->get('created');
 	$arr['fullname'] =  $res->getFullName();
-	$arr['statusname'] =  $res->getStatusName();
 	$arr['email'] =  $res->getEmail();
-	$arr['delivery'] = $res->get('delivery');
 	$arr['delivery_name'] = $res->getDeliveryName();
 	$arr['payment_name'] = $res->getPaymentName();
-	$arr['delivery_price'] = $res->getDeliveryPrice();
+	$arr['status_name'] =  $res->getStatusName();
 	if ($tmp =  $res->getAddress()) {
 		foreach($tmp as $k => $v) {
 			$arr['addr_'.$k] = $v;
