@@ -1,44 +1,19 @@
 <?php
 /**
- * miniShop
- *
- * Copyright 2010 by Shaun McCormick <shaun+minishop@modx.com>
- *
- * miniShop is free software; you can redistribute it and/or modify it under the
- * terms of the GNU General Public License as published by the Free Software
- * Foundation; either version 2 of the License, or (at your option) any later
- * version.
- *
- * miniShop is distributed in the hope that it will be useful, but WITHOUT ANY
- * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
- * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License along with
- * miniShop; if not, write to the Free Software Foundation, Inc., 59 Temple
- * Place, Suite 330, Boston, MA 02111-1307 USA
- *
- * @package minishop
- */
-/**
  * Get a list of Orders
  *
  * @package minishop
  * @subpackage processors
  */
-if (!$modx->hasPermission('view')) {return $modx->error->failure($modx->lexicon('ms.no_permission'));}
 
 $isLimit = !empty($_REQUEST['limit']);
 $start = $modx->getOption('start',$_REQUEST,0);
 $limit = $modx->getOption('limit',$_REQUEST,20);
 $sort = $modx->getOption('sort',$_REQUEST,'created');
-
 $dir = $modx->getOption('dir',$_REQUEST,'DESC');
-//$warehouse = $modx->getOption('warehouse', $_REQUEST, $_SESSION['minishop']['warehouse']);
-$status = $modx->getOption('status', $_REQUEST, $_SESSION['minishop']['status']);
-//$_SESSION['minishop']['warehouse'] = $warehouse;
-$_SESSION['minishop']['status'] = $status;
-
+$status = $_SESSION['minishop']['status'] = $modx->getOption('status', $_REQUEST, $_SESSION['minishop']['status']);
 $query = $modx->getOption('query',$_REQUEST, 0);
+
 $c = $modx->newQuery('ModOrders', array('uid' => $modx->user->id));
 
 if (!empty($status)) {
@@ -48,11 +23,6 @@ if (!empty($status)) {
 if (!empty($query)) {
 	$c->andCondition(array('num:LIKE' => '%'.$query.'%'));
 }
-/*
-if (!empty($warehouse)) {
-	$c->andCondition(array('wid' => $warehouse));
-}
-*/
 
 $count = $modx->getCount('ModOrders',$c);
 
@@ -66,8 +36,9 @@ foreach ($orders as $v) {
 		'id' => $v->get('id')
 		,'num' => $v->get('num')
 		,'sum' => $v->get('sum') + $v->getDeliveryPrice()
+		,'weight' => $v->get('weight')
 		,'fullname' => $v->getFullName()
-		,'warehousename' => $v->getWarehouseName()
+		,'warehouse_name' => $v->getWarehouseName()
 		,'status' => $v->get('status')
 		,'created' => $v->get('created')
 		,'updated' => $v->get('updated')
