@@ -7,12 +7,16 @@ Changelog for miniShop.
 - В таблице товаров теперь отображается их состояние, по типу дерева ресурсов (удаленый товар красным цветом, неопубликованный - серым и т.п.)
 - Исправлен баг при сохранении в админке заказа с пустым методом оплаты и не пустым методом доставки.
 - Ресурсы-категории товаров больше не обязаны быть контейнерами (теперь не важно значение isfolder).
+- Добавлена цена за единицу веса в методах доставки. Старая цена теперь дополнительная. Цена доставки вычисляется по формуле (weight * price) + add_price
+- Добавлен показ стоимости и веса заказа в менеджере.
 -----
 - Added invoke events to launch the plugins when you changing products in the component. mSearch will now index goods on changing.
 - Added a more options for resources in the editing window of the goods (deleted, richtext,cacheable, searchable and clearcache)
 - The goods grid now displays status of products, as in resources tree (deleted item is red color, unpublished - gray, etc.)
 - Fixed bug in manager when you save empty payment method and not empty delivery method.
 - Resources-categories of goods are no longer required to be containers (now isfolder is no matter).
+- Added the price per unit of weight in the methods of delivery. Old price is now additional. Shipping is calculated by the formula (weight * price) + add_price
+- Added displaying weight and sum of order in the manager.
 
 1.5.1 rc (24.04.2012)
 =============
